2007-05-10  Eric Seidel  <eric@webkit.org>

Reviewed by olliej.

        http://bugs.webkit.org/show_bug.cgi?id=11931
        PathCG fails to hit on unclosed sub-paths

        Test: svg/custom/hit-test-unclosed-subpaths.svg

        * platform/graphics/cg/PathCG.cpp:
        (WebCore::copyClosingSubpathsApplierFunction):
        (WebCore::copyCGPathClosingSubpaths):
        (WebCore::Path::contains): use new copy & close function



Canonical link: https://commits.webkit.org/20373@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26383 268f45cc-cd09-0410-ab3c-d52691b4dbfc